<resources>
    <string name="app_name">Pocket Kitchen</string>
    <string name="title_activity_tabbed">Pocket Kitchen</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_saved">Saved Recipes</string>
    <string name="title_activity_search">Advanced Search</string>
    <string name="title_activity_add_recipe">Add Your Own Recipe</string>
    <string name="title_activity_tutorial">Welcome!</string>
    <string name="snackbar_wip_feature">Sorry! This feature is still WIP!</string>
    <string name="snackbar_revoke_success">Success! The access has been revoked.</string>
    <string name="section_recipes">Recipes</string>
    <string name="section_list">Shopping List</string>
    <string name="section_kitchen">My Kitchen</string>
    <string name="lbl_btn_load_more_recipes">Load more recipes</string>
    <string name="lbl_item">Item:</string>
    <string name="lbl_ingredient">Ingredient:</string>
    <string name="lbl_quantity">Quantity:</string>
    <string name="lbl_add_custom_item_warning">
        Custom items won\'t update automatically!\n
        Use them only when necessary!
    </string>
    <string name="lbl_add_item_warning">
        Non-custom items can\'t be edited!\n
        You can delete it, or un-save the recipe.
    </string>
    <string name="lbl_add_item_requirements">
        Oops.\nYou\'ll need to populate some more boxes to do that.
    </string>
    <string name="lbl_recipe_ing_title_f">Ingredients Required:</string>
    <string name="lbl_recipe_ins_title_f">Instructions:</string>
    <string name="lbl_btn_sign_out">Sign Out of Google Account</string>
    <string name="lbl_btn_disconnect">Revoke Google Account Access</string>
    <string name="lbl_btn_proceed">Go To Pocket Kitchen</string>
    <string name="lbl_welcome_msg">Welcome %1$s!</string>
    <string name="lbl_drive_data">SYNCING DATA…</string>
    <string name="lbl_item_for_dialog">item</string>
    <string name="lbl_1_for_dialog">1</string>
    <string name="lbl_recipe_popular_f">Popular!</string>
    <string name="lbl_btn_add_recipe">Save</string>
    <string name="lbl_btn_rem_recipe">Un-save</string>
    <string name="lbl_btn_add_recipe_ings">Add to List</string>
    <string name="lbl_btn_rem_recipe_ings">Remove from List</string>
    <string name="hint_btn_add_recipe">Add the recipe to your saved list.</string>
    <string name="hint_btn_rem_recipe">Remove the recipe from your saved list.</string>
    <string name="hint_btn_add_recipe_ings">Add the ingredients to your shopping list.</string>
    <string name="hint_btn_rem_recipe_ings">Remove the ingredients from your shopping list.</string>
    <string name="feedback_added_recipe">Recipe has been saved!</string>
    <string name="feedback_removed_recipe">Recipe has been un-saved!</string>
    <string name="feedback_added_ings">Ingredients have been added to your list!</string>
    <string name="feedback_removed_ings">Ingredients have been removed from your list!</string>
    <string name="lbl_fab_search">Advanced Recipe Search</string>
    <string name="lbl_fab_scan">Scan Receipt</string>
    <string name="lbl_fab_add_item">Add Item</string>
    <string name="lbl_fab_add_recipe">Add Recipe</string>
    <string name="lbl_fab_view_saved">View Saved Recipes</string>
    <string name="lbl_fab_view_my_recipes">View My Custom Recipes</string>
    <string name="lbl_fab_export_list">Export List</string>
    <string name="lbl_fab_suggestion">Get Suggestions</string>
    <string name="export_subject_line">Exported Ingredients from my Pocket Kitchen:</string>
    <string name="lbl_dialog_edit_item">Edit List Item</string>
    <string name="lbl_dialog_new_item">New List Item</string>
    <string name="lbl_dialog_edit_kitchen">Edit Cupboard Item</string>
    <string name="lbl_dialog_new_kitchen">New Cupboard Item</string>
    <string name="lbl_dialog_confirmation_title">Confirmation Required:</string>
    <string name="lbl_dialog_confirmation_yes">Yes</string>
    <string name="lbl_dialog_confirmation_no">No</string>
    <string name="lbl_dialog_confirmation_revoke">Are you sure about that?\nAll saved data will also be deleted!</string>
    <string name="lbl_check_custom_recipe_privacy">Keep Private</string>
    <string name="lbl_btn_add_custom_recipe">Save &amp; Exit</string>
    <string name="lbl_custom_recipe_section_ingredients">Ingredients:</string>
    <string name="lbl_custom_recipe_section_instructions">Instructions:</string>
    <string name="lbl_custom_recipe_section_dietary">Dietary Information:</string>
    <string name="lbl_custom_recipe_section_title">Recipe Details:</string>
    <string name="hint_custom_recipe_enter_title">Enter your recipe title here…</string>
    <string name="hint_custom_recipe_enter_servings"># of Servings…</string>
    <string name="hint_custom_recipe_enter_minutes">Time Required…</string>
    <string name="hint_item_ingredient_name">name</string>
    <string name="hint_item_ingredient_qty">amount</string>
    <string name="hint_item_ingredient_qty_name">unit</string>
    <string name="custom_recipe_source_url">Created in Pocket Kitchen!</string>
    <string name="lbl_adv_search_terms">Recipe Search:</string>
    <string name="lbl_adv_search_type">Filter to Type:</string>
    <string name="lbl_adv_search_cuisine">Filter to Cuisines:</string>
    <string name="lbl_adv_search_dietary">Filter to Diet:</string>
    <string name="lbl_adv_search_exclusions">Other Exclusions: (comma separated)</string>
    <string name="lbl_adv_search_inst_yes">I would like instructions please!</string>
    <string name="lbl_adv_search_inst_no">Nevermind instructions, show me everything!</string>
    <string name="lbl_adv_search_check_main">Main Course</string>
    <string name="lbl_adv_search_check_side">Side Dish</string>
    <string name="lbl_adv_search_check_dessert">Dessert</string>
    <string name="lbl_adv_search_check_starter">Starter Dish</string>
    <string name="lbl_adv_search_check_salad">Salad Dish</string>
    <string name="lbl_adv_search_check_bread">Bread-based</string>
    <string name="lbl_adv_search_check_breakfast">Breakfast</string>
    <string name="lbl_adv_search_check_soup">Soup</string>
    <string name="lbl_adv_search_check_sauce">Sauce</string>
    <string name="lbl_adv_search_check_drink">Drink</string>
    <string name="lbl_adv_search_cuisine_african">African</string>
    <string name="lbl_adv_search_cuisine_chinese">Chinese</string>
    <string name="lbl_adv_search_cuisine_japanese">Japanese</string>
    <string name="lbl_adv_search_cuisine_korean">Korean</string>
    <string name="lbl_adv_search_cuisine_vietnamese">Vietnamese</string>
    <string name="lbl_adv_search_cuisine_thai">Thai</string>
    <string name="lbl_adv_search_cuisine_indian">Indian</string>
    <string name="lbl_adv_search_cuisine_british">British</string>
    <string name="lbl_adv_search_cuisine_irish">Irish</string>
    <string name="lbl_adv_search_cuisine_french">French</string>
    <string name="lbl_adv_search_cuisine_italian">Italian</string>
    <string name="lbl_adv_search_cuisine_mexican">Mexican</string>
    <string name="lbl_adv_search_cuisine_spanish">Spanish</string>
    <string name="lbl_adv_search_cuisine_middleeastern">Middle Eastern</string>
    <string name="lbl_adv_search_cuisine_jewish">Jewish</string>
    <string name="lbl_adv_search_cuisine_american">American</string>
    <string name="lbl_adv_search_cuisine_southern">Southern</string>
    <string name="lbl_adv_search_cuisine_greek">Greek</string>
    <string name="lbl_adv_search_cuisine_german">German</string>
    <string name="lbl_adv_search_cuisine_caribbean">Caribbean</string>
    <string name="hint_adv_search_search">Optional search terms…</string>
    <string name="hint_adv_search_clear">Reset all fields</string>
    <string name="hint_adv_search_terms">Enter your keywords here!</string>
    <string name="hint_adv_search_type">Narrow your search to a specific recipe type</string>
    <string name="hint_adv_search_restrictions">Narrow your search to specific diets</string>
    <string name="hint_adv_search_cuisines">Narrow your search to specific cuisines?</string>
    <string name="hint_adv_search_instructions">Do you require instructions?</string>
    <string name="hint_adv_search_exclusions">Narrow your search on your own terms</string>
    <string name="hint_btn_save">Save your changes</string>
    <string name="hint_btn_cancel">Undo any changes made</string>
    <string name="hint_btn_delete">Delete this item entirely</string>
    <string name="hint_btn_edit">Edit this item</string>
    <string name="hint_btn_purchase">Move this item to your kitchen</string>
    <string name="hint_search_recipes">Search for recipes…</string>
    <string name="hint_search_shopping">Filter your list…</string>
    <string name="hint_search_kitchen">Filter your kitchen…</string>
    <string name="hint_enter_measurement">kg/g/etc.</string>
    <string name="hint_edit_quantity">amount</string>
    <string name="hint_edit_item_name">item name</string>
    <string name="hint_btn_sign_out">Sign out from Pocket Kitchen</string>
    <string name="hint_btn_disconnect">Revoke Pocket Kitchen\'s access to your Google account</string>
    <string name="hint_btn_proceed">Click to proceed to the Pocket Kitchen application</string>
    <string name="hint_img_not_provided">No image provided by Spoonacular for this!</string>
    <string name="hint_img_for_custom">No image has been provided for this custom ingredient!</string>
    <string name="lbl_about_title">About Pocket Kitchen:</string>
    <string name="lbl_about_desc">
        Pocket Kitchen was developed by Sam Bewick as part of a final year University project at Plymouth University.
        It is intended to be a flexible application to help manage your diet or shopping habits.\n\n
        The following libraries or SDKs are used to support the application:\n
        \n- Spoonacular Academic License :\n\t spoonacular.com/food-api/sdk \n
        \n- Google GSON :\n\t com.google.code.gson:gson \n
        \n- Google Drive :\n\t com.google.android.gms:play-services-drive \n
        \n- Google Auth :\n\t com.google.android.gms:play-services-auth \n
        \n- Paolo Rotolo :\n\t com.github.paolorotolo:appintro \n
        \n- Clans\' FAB Menu :\n\t com.github.clans:fab \n
        \n- Amazon SDK :\n\t com.amazonaws:aws-android-sdk-core \n
        \n- Amazon S3 :\n\t com.amazonaws:aws-android-sdk-s3 \n
        \n- Amazon DynamoDB :\n\t con.amazonaws:aws-android-sdk-ddb-mapper \n
    </string>
    <string name="intro_welcome_title">Welcome to Pocket Kitchen!</string>
    <string name="intro_welcome_desc">
        Here\'s a quick introduction to your kitchen, but feel free to skip it and explore instead!
    </string>
    <string name="pref_header_my_kitchen">My Pocket Kitchen</string>
    <string name="pref_header_dietary_preferences">Dietary Preferences</string>
    <string name="pref_dietary_vegetarian">Vegetarian</string>
    <string name="pref_dietary_vegetarian_hint">Exclude non-vegetarian results from searched recipes.</string>
    <string name="pref_dietary_vegan">Vegan</string>
    <string name="pref_dietary_vegan_hint">Exclude non-vegan results from searched recipes.</string>
    <string name="pref_dietary_pescetarian">Pescetarian</string>
    <string name="pref_dietary_dairy">Dairy</string>
    <string name="pref_dietary_dairy_hint">Exclude dairy from searched recipes.</string>
    <string name="pref_dietary_eggs">Eggs</string>
    <string name="pref_dietary_gluten">Gluten</string>
    <string name="pref_dietary_gluten_hint">Exclude gluten from searched recipes.</string>
    <string name="pref_dietary_nuts">Nuts</string>
    <string name="pref_dietary_seafood">Seafood</string>
    <string name="pref_dietary_shellfish">Shellfish</string>
    <string name="pref_dietary_soy">Soy</string>
    <string name="pref_header_files">Pocket Kitchen Data</string>
</resources>