<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="sammobewick.pocketkitchen.activities_fragments.MySettingsActivity$MyPocketKitchenPreferences"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/pref_header_my_kitchen" />

    <header
        android:fragment="sammobewick.pocketkitchen.activities_fragments.MySettingsActivity$MyDataPreferences"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_files" />

    <header
        android:fragment="sammobewick.pocketkitchen.activities_fragments.MySettingsActivity$MyDietaryPreferences"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_dietary_preferences" />

</preference-headers>
